force-app/main/default/objects/Customer_Facing_GC_ID__c/Customer_Facing_GC_ID__c.object-meta.xml
<CustomObject>
    <label>Customer Facing GC ID</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Customer Facing GC ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Facing GC IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>