force-app/main/default/objects/Customer_Facing_GC_ID__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <formula>Account_Name__c</formula>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>