force-app/main/default/objects/Customer_Facing_GC_ID__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Facing GC IDs</relationshipLabel>
    <relationshipName>Customer_Facing_GC_IDs</relationshipName>
    <type>Lookup</type>
</CustomField>