force-app/main/default/objects/Customer_Facing_GC_ID__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Customer Facing GC IDs</relationshipLabel>
    <relationshipName>Customer_Facing_GC_IDs</relationshipName>
    <type>Lookup</type>
</CustomField>