force-app/main/default/objects/Customer_Facing_GC_ID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Global_Commit_ID__c</columns>
    <columns>Account_Id__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>